added datetime function to sort by current day of week on homepage. removed unnecessary boolean from registrationform. refactored app.py, removing errors due to long lines of code. changed welcome flash message when logging in. added terms and conditions.

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,6 +17,13 @@
 					<label class="active" for="password">Password</label>
 				</div>
 			</div>
+      <div class="col s4 switch">
+					<label>
+          <input type="checkbox" name="t&c" id="t&c" />
+          <span class="lever"></span>
+          I have read and understand the <a href="{{url_for('terms')}}" target="_blank">terms and conditions</a>
+        </label>
+				</div>
 			<button class="btn waves-effect waves-light" type="submit">Sign Up<i class="material-icons right">playlist_add</i></button>
 		</form>
 	</div>
