added profile picture upload functionality. Added users own events to profile page. Included organiser link to event cards in all html files

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,6 +49,15 @@
   z-index: -1;
 }
 
+.profile-image {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  display: block;
+  margin: 10px auto;
+}
+
 section {
   background-color: white;
 }
