edit event function added. noshow formatting adjusted so submit button on add-events is correctly aligned. Javascripted added to base.html to pull time from database for timepicker and a check function to see if a new file upload has been initiated, both for the edit event form.

--- a/templates/account.html
+++ b/templates/account.html
@@ -196,6 +196,20 @@
                 </div>
               </div>
             </div>
+            <div class="center">
+              <a
+                href="{{url_for('edit_event', event_id=event._id)}}"
+                class="btn waves-effect waves-light"
+              >
+                Edit Event
+              </a>
+              <a
+                href="{{url_for('edit_event', event_id=event._id)}}"
+                class="btn waves-effect waves-light red"
+              >
+                Delete Event
+              </a>
+            </div>
           </div>
           {% endfor %}
         </div>
