--- a/templates/add-event.html
+++ b/templates/add-event.html
@@ -110,13 +110,13 @@
 							<input class="file-path validate" type="text" />
       </div>
 						</div>
-						<div class="input-field col s12 m4 l4">
+						<div class="input-field col s12 m4 l4 noshow">
 							<input
         value=""
         id="event_image"
         name="event_image"
         type="text"
-        class="validate noshow"
+        class="validate"
       />
     </div>
 							<button class="btn waves-effect waves-light" type="submit">
