--- a/templates/base.html
+++ b/templates/base.html
@@ -1,90 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='css/style.css')}}"
+      type="text/css"
+    />
+    <title>Dance Your Way</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
-	<title>Dance Your Way</title>
-</head>
+  <body>
+    <header>
+      <nav>
+        <div class="nav-wrapper">
+          <a href="{{url_for('home')}}" class="brand-logo center"
+            >Dance Your Way</a
+          >
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
+          <ul class="right hide-on-med-and-down">
+            {% if session['logged'] == True %}
+            <li><a href="{{url_for('style')}}">Where to Dance</a></li>
+            <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+            <li><a href="{{url_for('sign_out')}}">Log Out</a></li>
+            {% else %}
+            <li><a href="{{url_for('style')}}">Where to Dance</a></li>
+            <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+            <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
+            {% endif %}
+          </ul>
+          {% if session['logged'] == True %}
+          <ul class="left hide-on-med-and-down">
+            <li>
+              <a href="{{url_for('account')}}"
+                ><i class="material-icons">account_circle</i></a
+              >
+            </li>
+          </ul>
+          {% endif %}
+        </div>
+      </nav>
 
-<body>
-	<header>
-		<nav>
-			<div class="nav-wrapper">
-				<a href="{{url_for('home')}}" class="brand-logo center">Dance Your Way</a>
-				<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-				<ul class="right hide-on-med-and-down">
-					{% if session['logged'] == True %}
-					<li><a href="{{url_for('style')}}">Where to Dance</a></li>
-					<li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-					<li><a href="{{url_for('sign_out')}}">Log Out</a></li>
-					{% else %}
-					<li><a href="{{url_for('style')}}">Where to Dance</a></li>
-					<li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-					<li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
-					{% endif %}
-				</ul>
-				{% if session['logged'] == True %}
-				<ul class="left hide-on-med-and-down">
-					<li><a href="{{url_for('account')}}"><i class="material-icons">account_circle</i></a></li>
-				</ul>
-				{% endif %}
-			</div>
-		</nav>
+      <ul class="sidenav" id="mobile-demo">
+        {% if session['logged'] == True %}
+        <li><a href="{{url_for('account')}}">Your Account</a></li>
+        {% endif %}
+        <li><a href="{{url_for('style')}}">Where to Dance</a></li>
+        <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+        <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
+      </ul>
+    </header>
 
-		<ul class="sidenav" id="mobile-demo">
-			{% if session['logged'] == True %}
-			<li><a href="{{url_for('account')}}">Your Account</a></li>
-			{% endif %}
-			<li><a href="{{url_for('style')}}">Where to Dance</a></li>
-			<li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-			<li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
-		</ul>
-	</header>
-
-	{% for message in get_flashed_messages() %}
-	<div class="alert-error center container">{{ message }}</div>
-	{% endfor %}
-
-	{% block content %} {% endblock %}
-	<footer class="page-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col l6 s12">
-					<h5 class="white-text">Footer Content</h5>
-					<p class="grey-text text-lighten-4">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit.
-					</p>
-				</div>
-				<div class="col l4 offset-l2 s12">
-					<h5 class="white-text">Social Media</h5>
-					<ul>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="footer-copyright">
-			<div class="container">
-				© 2020 Copyright Dance Your Way
-				<a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-			</div>
-		</div>
-	</footer>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function () {
+    {% for message in get_flashed_messages() %}
+    <div class="alert-error center container">{{ message }}</div>
+    {% endfor %} {% block content %} {% endblock %}
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Social Media</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          © 2020 Copyright Dance Your Way
+          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
         $(".sidenav").sidenav();
         $(".scrollspy").scrollSpy();
         $("select").formSelect();
-        $('.collapsible').collapsible();
+        $(".collapsible").collapsible();
         $(".timepicker").timepicker();
         $(
           "#name,#event_name,#address,#event_image_s3,#salsa,#bachata,#kizomba,#time,#weekday"
@@ -99,12 +114,29 @@
       document
         .getElementById("event_image_s3")
         .addEventListener("input", function () {
-          let event_image_s3 = document.getElementById("event_image_s3").value.replace(/C:\\Fakepath\\/i, '');
-          console.log(event_image_s3);
+          let event_image_s3 = document
+            .getElementById("event_image_s3")
+            .value.replace(/C:\\Fakepath\\/i, "");
           document.getElementById("event_image").value = event_image_s3;
-          console.log(document.getElementById("event_image").event_image_s3);
         });
-	</script>
-</body>
+      document
+        .getElementById("event_image_s3")
+        .addEventListener("input", function () {
+          let event_image_s3 = document
+            .getElementById("event_image_s3")
+            .value;
+          document.getElementById("image-check").value = event_image_s3;
+        });
 
+      let defaultTime = document.getElementById("jquery-time").value;
+      const myInput = document.getElementById("time");
+      const timeInstance = M.Timepicker.init(myInput, {
+        defaultTime: defaultTime,
+      });
+
+      // forces materialize time picker to display default time in input
+      timeInstance._updateTimeFromInput();
+      timeInstance.done();
+    </script>
+  </body>
 </html>
