--- a/templates/organiser.html
+++ b/templates/organiser.html
@@ -5,7 +5,10 @@
     src="https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/{{organiser.event_image}}"
     alt="{{organiser.event_image}} account image"
   />
-  <h1 class="center">{{organiser.username}}'s Contact Details</h1>
+  <h1 class="center">{{organiser.username}}</h1>
+  <h3>About {{organiser.username}}</h3>
+  <h5>{{organiser.about}}</h5>
+  <h3>Contact Details:</h3>
   <h5>Email: <a href="mailto: {{organiser.email}}">{{organiser.email}}</a></h5>
   <h5>Mobile: {{organiser.number}}</h5>
   <h5>
