--- a/templates/edit-event.html
+++ b/templates/edit-event.html
@@ -126,7 +126,7 @@
     </div>
     <div class="file-field input-field">
       <div class="btn">
-        <span>Event Image (optional)</span>
+        <span>Event Image</span>
         <input
           type="file"
           name="event_image_s3"
