delete function for user added. page listing all organisers created. organisers events added to the organiser.html page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,13 @@
   margin: 10px auto;
 }
 
+.small-profile-image {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 section {
   background-color: white;
 }
